--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <title>Protothon</title>
+<link rel="stylesheet" href="css/reset.css" type="text/css">
 <link rel="stylesheet" href="css/styles.css" type="text/css">
+<link href='http://fonts.googleapis.com/css?family=Rambla:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
+
+<header>
+	<h1>Protothon</h1>
+</header>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
 <script src="js/main.js"></script>
