--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
+<script src="js/vendor/radio.js"></script>
 <script src="js/main.js"></script>
+<script src="js/audio.js"></script>
 </body>
 </html>
