Add a dummy function which emits slider values

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 <script src="js/vendor/radio.js"></script>
 <script src="js/main.js"></script>
 <script src="js/audio.js"></script>
+<script src="js/slider.js"></script>
 </body>
 </html>
