--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<h2>Controls</h2>
 
 	<div class="slider" id="slider1">
-		<p>Audio Filter #1: <span class="value"></span></p>
+		<p>Audio Filter #1 (currently changing via setInterval): <span class="value"></span></p>
 		<input type="range" min="100" max="500" />
 	</div>
 
