--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 <article class="ui-components">
 	<h2>Controls</h2>
 
-	<div class="slider" id="slider1">
+	<div class="slider" id="filter-1">
 		<p>Audio Filter #1 (currently changing via setInterval): <span class="value"></span></p>
 		<input type="range" min="100" max="500" />
 	</div>
 
-	<div class="slider" id="slider2">
+	<div class="slider" id="filter-2">
 		<p>Audio Filter #2: <span class="value"></span></p>
 		<input type="range" min="100" max="500" />
 	</div>
 
-	<div class="slider" id="slider3">
+	<div class="slider" id="filter-3">
 		<p>Audio Filter #3: <span class="value"></span></p>
 		<input type="range" min="100" max="500" />
 	</div>	
