--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
 <script src="js/vendor/radio.js"></script>
+<script src="js/vendor/abbey-load.js"></script>
+
 <script src="js/main.js"></script>
 <script src="js/audio.js"></script>
 <script src="js/slider.js"></script>
