--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<h2>Controls</h2>
 
 	<div class="slider" id="filter-1">
-		<p>Audio Filter #1 (currently changing via setInterval): <span class="value"></span></p>
-		<input type="range" min="100" max="500" />
+		<p>Source playback rate (<span class="value"></span>)</p>
+		<input type="range" min="0.1" max="2" step="0.1" />
 	</div>
 
 	<div class="slider" id="filter-2">
