Add terrible distortion

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	</div>
 
 	<div class="slider" id="filter-2">
-		<p>Audio Filter #2: <span class="value"></span></p>
-		<input type="range" min="100" max="500" />
+		<p>Distortion (<span class="value"></span>)</p>
+		<input type="range" min="0" max="30" />
 	</div>
 
 	<div class="slider" id="filter-3">
