--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
 <script src="js/vendor/radio.js"></script>
 <script src="js/vendor/abbey-load.js"></script>
+<script src="js/vendor/magi.js"></script>
+<script src="js/vendor/JSARToolKit.js"></script>
 <script src="js/filters.js"></script>
 <script src="js/audio.js"></script>
 <script src="js/slider.js"></script>
 <script src="js/video.js"></script>
+<script src="js/ar.js"></script>
 <script src="js/main.js"></script>
 
 <video autoplay></video>
