--- a/marker.html
+++ b/marker.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+			
+			<style type="text/css">
+			button {
+				display: block;
+				width: 100%;
+				height: 50px;
+				margin-bottom: 20px;
+			}
+			</style>
+	</head>
 	<body>
 		<div>
 			<button onclick="chooseMarker(this.value)" value="1">1</button>
