--- a/index.html
+++ b/index.html
@@ -45,9 +45,13 @@
 <script src="js/slider.js"></script>
 <script src="js/video.js"></script>
 <script src="js/ar.js"></script>
+<script src="http://live.xsockets.net/Scripts/json2.js" type="text/javascript"></script>
+<script src="http://live.xsockets.net/Scripts/jXSockets.1.0.6.beta.js" type="text/javascript"></script>
 <script src="js/main.js"></script>
 
-<video autoplay></video>
+
+<button id="startbutton">Start</button> <br />
+<video id="myvideo" autoplay></video>
 
 </body>
 </html>
