--- a/marker.html
+++ b/marker.html
@@ -2,15 +2,27 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-			
-			<style type="text/css">
-			button {
-				display: block;
-				width: 100%;
-				height: 50px;
-				margin-bottom: 20px;
-			}
-			</style>
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		
+		<title>Marker</title>
+		
+		<style type="text/css">
+		button {
+			display: block;
+			width: 100%;
+			height: 50px;
+			margin-bottom: 20px;
+		}
+
+		body {
+			text-align: center;
+		}
+
+		img {
+			width: 90%;
+			margin: 50px auto;
+		}
+		</style>
 	</head>
 	<body>
 		<div>
