Add low pass filter

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 	</div>
 
 	<div class="slider" id="filter-3">
-		<p>Audio Filter #3: <span class="value"></span></p>
-		<input type="range" min="100" max="500" />
+		<p>Low pass (<span class="value"></span>)</p>
+		<input type="range" min="0.5" max="2" step="0.1" />
 	</div>	
 
 </article>
