--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 		<input type="range" min="0.5" max="2" step="0.1" />
 	</div>	
 
+	<button id="startbutton">Start Video</button> <br />
+
 </article>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
@@ -49,8 +51,6 @@
 <script src="http://live.xsockets.net/Scripts/jXSockets.1.0.6.beta.js" type="text/javascript"></script>
 <script src="js/main.js"></script>
 
-
-<button id="startbutton">Start</button> <br />
 <video id="myvideo" autoplay></video>
 
 </body>
