--- a/marker.html
+++ b/marker.html
@@ -28,9 +28,9 @@
 		<div>
 			<button onclick="chooseMarker(this.value)" value="0.png">This one</button>
 			
-			<button onclick="chooseMarker(this.value)" value="1">1</button>
-			<button onclick="chooseMarker(this.value)" value="2">2</button>
-			<button onclick="chooseMarker(this.value)" value="3">3</button>
+			<button onclick="chooseMarker(this.value)" value="1">Playback</button>
+			<button onclick="chooseMarker(this.value)" value="2">Distortion</button>
+			<button onclick="chooseMarker(this.value)" value="3">Low Pass</button>
 			<button onclick="chooseMarker(this.value)" value="4">4</button>
 		</div>
 		<img />
