--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<input type="range" min="0.1" max="1" step="0.1" />
 	</div>	
 
-	<button id="startbutton">Start Video</button> <br />
+	<button id="startbutton">Start</button> <br />
 
 </article>
 
