--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <header>
 	<h1>Protothon</h1>
+
+	<!-- Github ribbon -->
 	<a href="https://github.com/mustafasezgin/protoproject"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>	
 </header>
 
