use normalise.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Protothon</title>
-<link rel="stylesheet" href="css/reset.css" type="text/css">
+<link rel="stylesheet" href="css/normalize.css" type="text/css">
 <link rel="stylesheet" href="css/styles.css" type="text/css">
 <link rel="stylesheet" href="css/slider.css" type="text/css">
 
