--- a/index.html
+++ b/index.html
@@ -5,40 +5,57 @@
 <title>Protothon</title>
 <link rel="stylesheet" href="css/normalize.css" type="text/css">
 <link rel="stylesheet" href="css/styles.css" type="text/css">
-<link rel="stylesheet" href="css/slider.css" type="text/css">
 
-<link href='http://fonts.googleapis.com/css?family=Rambla:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
-<header>
-	<h1>Protothon</h1>
+<!-- Github ribbon -->
+<a href="https://github.com/mustafasezgin/protoproject"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 
-	<!-- Github ribbon -->
-	<a href="https://github.com/mustafasezgin/protoproject"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>	
-</header>
+<div class="container">
 
-<article class="ui-components">
-	<h2>Controls</h2>
+	<div class="site-box">
+		<hgroup class="hgroup">
+			<h1 class="logo">protoproject</h1>
+			<h2 class="tagline">An experiment using Augmented Reality and the Web Audio API</h2>
+		</hgroup>
 
-	<div class="slider" id="filter-1">
-		<p>Source playback rate (<span class="value"></span>)</p>
-		<input type="range" min="0.1" max="2" step="0.1" />
-	</div>
 
-	<div class="slider" id="filter-2">
-		<p>Distortion (<span class="value"></span>)</p>
-		<input type="range" min="0" max="30" />
-	</div>
+		<article class="ui-components">
+			<div class="slider" id="filter-1">
+				<p>Playback rate (<span class="value"></span>)</p>
+				<input type="range" min="0.1" max="2" step="0.1" />
+			</div>
 
-	<div class="slider" id="filter-3">
-		<p>Low pass (<span class="value"></span>)</p>
-		<input type="range" min="0.1" max="1" step="0.1" />
-	</div>	
+			<div class="slider" id="filter-2">
+				<p>Distortion (<span class="value"></span>)</p>
+				<input type="range" min="0" max="30" />
+			</div>
 
-	<button id="startbutton">Start</button> <br />
+			<div class="slider" id="filter-3">
+				<p>Low pass (<span class="value"></span>)</p>
+				<input type="range" min="0.1" max="1" step="0.1" />
+			</div>	
+		</article> <!-- .ui-components -->
 
-</article>
+
+		<div class="cta-option">
+			<a id="start" class="btn-download btn-download-alt" href="#">
+				Play Audio
+			</a>
+			<p class="txt-small txt-mute">
+				Requires webcam access for AR Features
+			</p>
+		</div><!-- cta-option -->	
+	</div><!-- .site-box -->
+
+
+
+
+
+	<video id="myvideo" autoplay></video>
+
+</div><!-- .container -->
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
 <script src="js/vendor/radio.js"></script>
@@ -53,8 +70,6 @@
 <script src="http://live.xsockets.net/Scripts/json2.js" type="text/javascript"></script>
 <script src="http://live.xsockets.net/Scripts/jXSockets.1.0.6.beta.js" type="text/javascript"></script>
 <script src="js/main.js"></script>
-
-<video id="myvideo" autoplay></video>
 
 </body>
 </html>
