single object for visualisation

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 		</article> <!-- .ui-components -->
 
 
+		<article class="media">
+
+		</article><!-- .media -->
+
+
 		<div class="cta-option">
 			<a id="start" class="btn-download btn-download-alt" href="#">
 				Play Audio
