added a link to marker.html

--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
 		</div><!-- cta-option -->	
 	</div><!-- .site-box -->
 
-
-
-
-
 	<video id="myvideo" autoplay></video>
+
+	<div class="site-footer">
+
+		<p>AR Detection markers are at <a href="marker.html">marker.html</a></p>
+
+	</div><!-- .site-footer -->
 
 </div><!-- .container -->
 
